# py4design-cea

./: pyproject.toml  readme.txt
py4design/py3dmodel/: calculate.py  construct.py  fetch.py  modify.py  utility.py
py4design/py3dmodel/OCCUtils/: Common.py  Construct.py  Topology.py  base.py  edge.py  face.py
