[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py4design"
version = "0.32"
description = "Python Library for Rapid Development of Design Workflows"
authors = [
    {name = "CHEN Kian Wee", email = "chenkianwee@gmail.com"}
]
maintainers = [
    {name = "Chen Kian Wee", email = "chenkianwee@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "readme.txt"
requires-python = ">=3.8"
keywords = [
    "design workflow",
    "urban design", 
    "architecture design",
    "design optimisation",
    "design simulation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "lxml",
    "pyshp", 
    "numpy",
    "scipy",
    "sympy",
    "pycollada",
    "networkx",
    "scikit-learn",
    "cvxopt",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/chenkianwee/py4design"
Repository = "https://github.com/chenkianwee/py4design"
Documentation = "http://chenkianwee.github.io/py4design/"
"Bug Tracker" = "https://github.com/chenkianwee/py4design/issues"
Download = "https://github.com/chenkianwee/py4design/archive/0.2a1.tar.gz"

[tool.setuptools.packages.find]
where = ["."]
include = ["py4design*"]

[tool.setuptools.package-data]
py4design = [
    "databases/ettv/*.csv",
    "py2radiance/*.rad"
]
